Cabal-Version: >= 1.2
Category:      Physics
Name:          Hipmunk
Version:       0.1
Stability:     alpha
License:       OtherLicense
License-File:  LICENSE
Copyright:     (c) 2008 Felipe A. Lessa
Author:        Felipe A. Lessa <felipe.lessa@gmail.com>
Maintainer:    Felipe A. Lessa <felipe.lessa@gmail.com>
Synopsis:      A Haskell binding for Chipmunk.
Description:
      Chipmunk is a fast, simple, portable, 2D physics engine
      (<http://wiki.slembcke.net/main/published/Chipmunk>).
      .
      This package contains the Chipmunk rev4 source
      (from <http://chipmunk-physics.googlecode.com/svn/trunk/>)
      and Haskell bindings to all of its functions.
      .
      Licensed under the MIT license (like Chipmunk itself).

Library
  Exposed-Modules:
      Physics.Hipmunk.Common,
      Physics.Hipmunk.Body,
      Physics.Hipmunk.Shape
  Other-Modules:
      Physics.Hipmunk.Internal
  Include-Dirs:
      Physics/Hipmunk,
      chipmunk
  Includes:
      wrapper.h
  C-Sources:
      chipmunk/chipmunk.c,
      chipmunk/cpArbiter.c,
      chipmunk/cpArray.c,
      chipmunk/cpBB.c,
      chipmunk/cpBody.c,
      chipmunk/cpCollision.c,
      chipmunk/cpHashSet.c,
      chipmunk/cpJoint.c,
      chipmunk/cpPolyShape.c,
      chipmunk/cpShape.c,
      chipmunk/cpSpace.c,
      chipmunk/cpSpaceHash.c,
      chipmunk/cpVect.c,
      Physics/Hipmunk/wrapper.c
  Build-Depends: base
  Extensions:    CPP, ForeignFunctionInterface
  Build-Tools:   hsc2hs
  GHC-Options:   -O2 -Wall
  CC-Options:    -O3 -ffast-math -std=gnu99
  LD-Options:    -lm
